# 2D-Engine

./: CMakeLists.txt  README.md
buildmac/: CMakeCache.txt  Makefile  cmake_install.cmake  main
buildmac/src/: Makefile  cmake_install.cmake
buildmac/src/engine/: Makefile  cmake_install.cmake
buildmac/src/engine/rendering/: Makefile  cmake_install.cmake
buildwin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.sln  main.vcxproj  main.vcxproj.filters
buildwin/main.dir/Debug/: main.exe.recipe  main.ilk  main.vcxproj.FileListAbsolute.txt
buildwin/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.write.1u.tlog
buildwin/main.dir/Release/: main.exe.recipe  main.vcxproj.FileListAbsolute.txt
buildwin/main.dir/Release/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.write.1u.tlog
buildwin/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildwin/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
buildwin/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
buildwin/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
buildwin/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
buildwin/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
buildwin/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
res/shaders/: default.frag  default.vert  post_process.frag  post_process.vert
res/textures/: placeholder.txt
src/: Engine.cpp  Engine.h  Entity.h  Flags.h  GameState.h  Ref.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScriptEngine.cpp  ScriptEngine.h  System.h  Window.cpp  Window.h  config.h  eng_util.h  extern.h  main.cpp  settings.h  singleton.h  util.h
src/components/: AnimSpriteComponent.cpp  AnimSpriteComponent.h  ColliderComponent.h  PhysicsComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp
src/engine/: Engine.cpp  Engine.h  Entity.h  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  System.h  window.cpp  window.h
src/engine/components/: AnimSpriteComponent.cpp  AnimSpriteComponent.h  ColliderComponent.h  PhysicsComponent.h  Sprite.cpp  Sprite.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
src/engine/entities/: ImageEntity.cpp  ImageEntity.h  StaticEntity.cpp  StaticEntity.h
src/engine/gameobjects/: ImageGameObject.cpp  ImageGameObject.h  PlayerGameObject.cpp  PlayerGameObject.h
src/engine/rendering/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  sprite.cpp  sprite.h
src/engine/systems/: CameraControllerSystem.cpp  CameraControllerSystem.h  CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  TimerSystem.cpp  TimerSystem.h
src/engine/utils/: Random.h
src/entities/: ImageEntity.cpp  ImageEntity.h  PlayerEntity.cpp  PlayerEntity.h  StaticEntity.cpp  StaticEntity.h
src/game/components/: placeholder.txt
src/game/entities/: PlayerEntity.cpp  PlayerEntity.h
src/game/gameobjects/: PlayerGameObject.cpp  PlayerGameObject.h
src/game/scenes/: TestLevel.cpp  TestLevel.h
src/rendering/: Camera.h  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/scenes/: TestLevel.cpp  TestLevel.h
src/scripts/: test.lua
src/systems/: CameraControllerSystem.cpp  CameraControllerSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  TimerSystem.cpp  TimerSystem.h
src/utils/: Random.cpp
